test/positive/feature_protectedmethods.java

public class feature_protectedmethods {
  public feature_protectedmethods() {}
  protected int m() {
    return 42;
  }
}

